grammar/.antlr/CWSpecParser.py
# Generated from /Users/william/t1/cwsc/grammar/CWSpecParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CWSpecParser ( Parser ):

    grammarFileName = "CWSpecParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'/**'", "'*/'", "'///'", "<INVALID>", "<INVALID>", 
                     "'*'", "<INVALID>", "<INVALID>", "'@title'", "'@author'", 
                     "'@note'", "'@info'", "'@tip'", "<INVALID>", "'@danger'", 
                     "'@details'", "'@param'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'@key'" ]

    symbolicNames = [ "<INVALID>", "IDENT", "NL", "SPACE", "CWSPEC_BLOCK_START", 
                      "CWSPEC_BLOCK_END", "CWSPEC_LINE_START", "CONTINUE_LINE", 
                      "InlineMacro", "STAR", "INTEGER", "TEXT", "T_TITLE", 
                      "T_AUTHOR", "T_NOTE", "T_INFO", "T_TIP", "T_WARNING", 
                      "T_DANGER", "T_DETAILS", "T_PARAM", "T_RETURNS", "T_RESPONSE", 
                      "T_MEMBER", "T_KEY", "T_KEY_named", "T_VALUE", "AT", 
                      "COLON" ]

    RULE_cwspec = 0
    RULE_cwspecLines = 1
    RULE_wsLines = 2
    RULE_descriptionLines = 3
    RULE_descriptionLine = 4
    RULE_descriptionStart = 5
    RULE_descriptionElement = 6
    RULE_inlineMacro = 7
    RULE_nonTag = 8
    RULE_tagSectionLines = 9
    RULE_tagSectionLine = 10
    RULE_ts_start = 11
    RULE_titleLine = 12
    RULE_authorLine = 13
    RULE_admonitionLine = 14
    RULE_paramLine = 15
    RULE_returnsLine = 16
    RULE_responseLine = 17
    RULE_memberLine = 18
    RULE_keyLine = 19
    RULE_valueLine = 20
    RULE_lineElement = 21
    RULE_textElement = 22
    RULE_skipWs = 23

    ruleNames =  [ "cwspec", "cwspecLines", "wsLines", "descriptionLines", 
                   "descriptionLine", "descriptionStart", "descriptionElement", 
                   "inlineMacro", "nonTag", "tagSectionLines", "tagSectionLine", 
                   "ts_start", "titleLine", "authorLine", "admonitionLine", 
                   "paramLine", "returnsLine", "responseLine", "memberLine", 
                   "keyLine", "valueLine", "lineElement", "textElement", 
                   "skipWs" ]

    EOF = Token.EOF
    IDENT=1
    NL=2
    SPACE=3
    CWSPEC_BLOCK_START=4
    CWSPEC_BLOCK_END=5
    CWSPEC_LINE_START=6
    CONTINUE_LINE=7
    InlineMacro=8
    STAR=9
    INTEGER=10
    TEXT=11
    T_TITLE=12
    T_AUTHOR=13
    T_NOTE=14
    T_INFO=15
    T_TIP=16
    T_WARNING=17
    T_DANGER=18
    T_DETAILS=19
    T_PARAM=20
    T_RETURNS=21
    T_RESPONSE=22
    T_MEMBER=23
    T_KEY=24
    T_KEY_named=25
    T_VALUE=26
    AT=27
    COLON=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CwspecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CWSpecParser.EOF, 0)

        def cwspecLines(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWSpecParser.CwspecLinesContext)
            else:
                return self.getTypedRuleContext(CWSpecParser.CwspecLinesContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(CWSpecParser.NL)
            else:
                return self.getToken(CWSpecParser.NL, i)

        def getRuleIndex(self):
            return CWSpecParser.RULE_cwspec




    def cwspec(self):

        localctx = CWSpecParser.CwspecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_cwspec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CWSpecParser.CWSPEC_LINE_START]:
                    self.state = 48
                    self.cwspecLines()
                    pass
                elif token in [CWSpecParser.NL]:
                    self.state = 49
                    self.match(CWSpecParser.NL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CWSpecParser.NL or _la==CWSpecParser.CWSPEC_LINE_START):
                    break

            self.state = 54
            self.match(CWSpecParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CwspecLinesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def descriptionLines(self):
            return self.getTypedRuleContext(CWSpecParser.DescriptionLinesContext,0)


        def wsLines(self):
            return self.getTypedRuleContext(CWSpecParser.WsLinesContext,0)


        def tagSectionLines(self):
            return self.getTypedRuleContext(CWSpecParser.TagSectionLinesContext,0)


        def getRuleIndex(self):
            return CWSpecParser.RULE_cwspecLines




    def cwspecLines(self):

        localctx = CWSpecParser.CwspecLinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_cwspecLines)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.descriptionLines()
                self.state = 58
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 57
                    self.wsLines()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.descriptionLines()
                self.state = 62
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 61
                    self.wsLines()


                self.state = 64
                self.tagSectionLines()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 66
                    self.wsLines()


                self.state = 69
                self.tagSectionLines()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WsLinesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CWSPEC_LINE_START(self, i:int=None):
            if i is None:
                return self.getTokens(CWSpecParser.CWSPEC_LINE_START)
            else:
                return self.getToken(CWSpecParser.CWSPEC_LINE_START, i)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(CWSpecParser.NL)
            else:
                return self.getToken(CWSpecParser.NL, i)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CWSpecParser.SPACE)
            else:
                return self.getToken(CWSpecParser.SPACE, i)

        def getRuleIndex(self):
            return CWSpecParser.RULE_wsLines




    def wsLines(self):

        localctx = CWSpecParser.WsLinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_wsLines)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 72
                    self.match(CWSpecParser.CWSPEC_LINE_START)
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CWSpecParser.SPACE:
                        self.state = 73
                        self.match(CWSpecParser.SPACE)
                        self.state = 78
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 79
                    self.match(CWSpecParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 82 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionLinesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def descriptionLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWSpecParser.DescriptionLineContext)
            else:
                return self.getTypedRuleContext(CWSpecParser.DescriptionLineContext,i)


        def getRuleIndex(self):
            return CWSpecParser.RULE_descriptionLines




    def descriptionLines(self):

        localctx = CWSpecParser.DescriptionLinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_descriptionLines)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 84
                    self.descriptionLine()

                else:
                    raise NoViableAltException(self)
                self.state = 87 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CWSPEC_LINE_START(self):
            return self.getToken(CWSpecParser.CWSPEC_LINE_START, 0)

        def descriptionStart(self):
            return self.getTypedRuleContext(CWSpecParser.DescriptionStartContext,0)


        def NL(self):
            return self.getToken(CWSpecParser.NL, 0)

        def descriptionElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWSpecParser.DescriptionElementContext)
            else:
                return self.getTypedRuleContext(CWSpecParser.DescriptionElementContext,i)


        def inlineMacro(self):
            return self.getTypedRuleContext(CWSpecParser.InlineMacroContext,0)


        def getRuleIndex(self):
            return CWSpecParser.RULE_descriptionLine




    def descriptionLine(self):

        localctx = CWSpecParser.DescriptionLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_descriptionLine)
        self._la = 0 # Token type
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(CWSpecParser.CWSPEC_LINE_START)
                self.state = 90
                self.descriptionStart()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CWSpecParser.IDENT) | (1 << CWSpecParser.SPACE) | (1 << CWSpecParser.STAR) | (1 << CWSpecParser.TEXT) | (1 << CWSpecParser.AT))) != 0):
                    self.state = 91
                    self.descriptionElement()
                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 97
                self.match(CWSpecParser.NL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(CWSpecParser.CWSPEC_LINE_START)
                self.state = 100
                self.inlineMacro()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CWSpecParser.IDENT) | (1 << CWSpecParser.SPACE) | (1 << CWSpecParser.STAR) | (1 << CWSpecParser.TEXT) | (1 << CWSpecParser.AT))) != 0):
                    self.state = 101
                    self.descriptionElement()
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 107
                self.match(CWSpecParser.NL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionStartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self):
            return self.getToken(CWSpecParser.SPACE, 0)

        def nonTag(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWSpecParser.NonTagContext)
            else:
                return self.getTypedRuleContext(CWSpecParser.NonTagContext,i)


        def textElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWSpecParser.TextElementContext)
            else:
                return self.getTypedRuleContext(CWSpecParser.TextElementContext,i)


        def getRuleIndex(self):
            return CWSpecParser.RULE_descriptionStart




    def descriptionStart(self):

        localctx = CWSpecParser.DescriptionStartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_descriptionStart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CWSpecParser.SPACE:
                self.state = 111
                self.match(CWSpecParser.SPACE)


            self.state = 115 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 114
                    self.nonTag()

                else:
                    raise NoViableAltException(self)
                self.state = 117 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 119
                    self.textElement() 
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inlineMacro(self):
            return self.getTypedRuleContext(CWSpecParser.InlineMacroContext,0)


        def textElement(self):
            return self.getTypedRuleContext(CWSpecParser.TextElementContext,0)


        def getRuleIndex(self):
            return CWSpecParser.RULE_descriptionElement




    def descriptionElement(self):

        localctx = CWSpecParser.DescriptionElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_descriptionElement)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CWSpecParser.AT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.inlineMacro()
                pass
            elif token in [CWSpecParser.IDENT, CWSpecParser.SPACE, CWSpecParser.STAR, CWSpecParser.TEXT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.textElement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineMacroContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(CWSpecParser.AT, 0)

        def COLON(self):
            return self.getToken(CWSpecParser.COLON, 0)

        def getRuleIndex(self):
            return CWSpecParser.RULE_inlineMacro




    def inlineMacro(self):

        localctx = CWSpecParser.InlineMacroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_inlineMacro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(CWSpecParser.AT)
            self.state = 130
            self.match(CWSpecParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NonTagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(CWSpecParser.TEXT, 0)

        def IDENT(self):
            return self.getToken(CWSpecParser.IDENT, 0)

        def INTEGER(self):
            return self.getToken(CWSpecParser.INTEGER, 0)

        def STAR(self):
            return self.getToken(CWSpecParser.STAR, 0)

        def getRuleIndex(self):
            return CWSpecParser.RULE_nonTag




    def nonTag(self):

        localctx = CWSpecParser.NonTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nonTag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CWSpecParser.IDENT) | (1 << CWSpecParser.STAR) | (1 << CWSpecParser.INTEGER) | (1 << CWSpecParser.TEXT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagSectionLinesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tagSectionLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWSpecParser.TagSectionLineContext)
            else:
                return self.getTypedRuleContext(CWSpecParser.TagSectionLineContext,i)


        def getRuleIndex(self):
            return CWSpecParser.RULE_tagSectionLines




    def tagSectionLines(self):

        localctx = CWSpecParser.TagSectionLinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tagSectionLines)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 134
                    self.tagSectionLine()

                else:
                    raise NoViableAltException(self)
                self.state = 137 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagSectionLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def titleLine(self):
            return self.getTypedRuleContext(CWSpecParser.TitleLineContext,0)


        def authorLine(self):
            return self.getTypedRuleContext(CWSpecParser.AuthorLineContext,0)


        def admonitionLine(self):
            return self.getTypedRuleContext(CWSpecParser.AdmonitionLineContext,0)


        def paramLine(self):
            return self.getTypedRuleContext(CWSpecParser.ParamLineContext,0)


        def returnsLine(self):
            return self.getTypedRuleContext(CWSpecParser.ReturnsLineContext,0)


        def responseLine(self):
            return self.getTypedRuleContext(CWSpecParser.ResponseLineContext,0)


        def memberLine(self):
            return self.getTypedRuleContext(CWSpecParser.MemberLineContext,0)


        def keyLine(self):
            return self.getTypedRuleContext(CWSpecParser.KeyLineContext,0)


        def valueLine(self):
            return self.getTypedRuleContext(CWSpecParser.ValueLineContext,0)


        def getRuleIndex(self):
            return CWSpecParser.RULE_tagSectionLine




    def tagSectionLine(self):

        localctx = CWSpecParser.TagSectionLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tagSectionLine)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.titleLine()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.authorLine()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.admonitionLine()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 142
                self.paramLine()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 143
                self.returnsLine()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 144
                self.responseLine()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 145
                self.memberLine()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 146
                self.keyLine()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 147
                self.valueLine()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ts_startContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CWSPEC_LINE_START(self):
            return self.getToken(CWSpecParser.CWSPEC_LINE_START, 0)

        def SPACE(self):
            return self.getToken(CWSpecParser.SPACE, 0)

        def getRuleIndex(self):
            return CWSpecParser.RULE_ts_start




    def ts_start(self):

        localctx = CWSpecParser.Ts_startContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ts_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(CWSpecParser.CWSPEC_LINE_START)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CWSpecParser.SPACE:
                self.state = 151
                self.match(CWSpecParser.SPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TitleLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._lineElement = None # LineElementContext
            self.elements = list() # of LineElementContexts

        def ts_start(self):
            return self.getTypedRuleContext(CWSpecParser.Ts_startContext,0)


        def T_TITLE(self):
            return self.getToken(CWSpecParser.T_TITLE, 0)

        def NL(self):
            return self.getToken(CWSpecParser.NL, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CWSpecParser.SPACE)
            else:
                return self.getToken(CWSpecParser.SPACE, i)

        def lineElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWSpecParser.LineElementContext)
            else:
                return self.getTypedRuleContext(CWSpecParser.LineElementContext,i)


        def getRuleIndex(self):
            return CWSpecParser.RULE_titleLine




    def titleLine(self):

        localctx = CWSpecParser.TitleLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_titleLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.ts_start()
            self.state = 155
            self.match(CWSpecParser.T_TITLE)
            self.state = 157 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 156
                    self.match(CWSpecParser.SPACE)

                else:
                    raise NoViableAltException(self)
                self.state = 159 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CWSpecParser.IDENT) | (1 << CWSpecParser.SPACE) | (1 << CWSpecParser.STAR) | (1 << CWSpecParser.TEXT) | (1 << CWSpecParser.AT))) != 0):
                self.state = 161
                localctx._lineElement = self.lineElement()
                localctx.elements.append(localctx._lineElement)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 167
            self.match(CWSpecParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AuthorLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._lineElement = None # LineElementContext
            self.elements = list() # of LineElementContexts

        def ts_start(self):
            return self.getTypedRuleContext(CWSpecParser.Ts_startContext,0)


        def T_AUTHOR(self):
            return self.getToken(CWSpecParser.T_AUTHOR, 0)

        def NL(self):
            return self.getToken(CWSpecParser.NL, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CWSpecParser.SPACE)
            else:
                return self.getToken(CWSpecParser.SPACE, i)

        def lineElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWSpecParser.LineElementContext)
            else:
                return self.getTypedRuleContext(CWSpecParser.LineElementContext,i)


        def getRuleIndex(self):
            return CWSpecParser.RULE_authorLine




    def authorLine(self):

        localctx = CWSpecParser.AuthorLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_authorLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.ts_start()
            self.state = 170
            self.match(CWSpecParser.T_AUTHOR)
            self.state = 172 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 171
                    self.match(CWSpecParser.SPACE)

                else:
                    raise NoViableAltException(self)
                self.state = 174 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,21,self._ctx)

            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CWSpecParser.IDENT) | (1 << CWSpecParser.SPACE) | (1 << CWSpecParser.STAR) | (1 << CWSpecParser.TEXT) | (1 << CWSpecParser.AT))) != 0):
                self.state = 176
                localctx._lineElement = self.lineElement()
                localctx.elements.append(localctx._lineElement)
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 182
            self.match(CWSpecParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdmonitionLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.admType = None # Token
            self._lineElement = None # LineElementContext
            self.elements = list() # of LineElementContexts

        def ts_start(self):
            return self.getTypedRuleContext(CWSpecParser.Ts_startContext,0)


        def NL(self):
            return self.getToken(CWSpecParser.NL, 0)

        def T_NOTE(self):
            return self.getToken(CWSpecParser.T_NOTE, 0)

        def T_INFO(self):
            return self.getToken(CWSpecParser.T_INFO, 0)

        def T_TIP(self):
            return self.getToken(CWSpecParser.T_TIP, 0)

        def T_WARNING(self):
            return self.getToken(CWSpecParser.T_WARNING, 0)

        def T_DANGER(self):
            return self.getToken(CWSpecParser.T_DANGER, 0)

        def T_DETAILS(self):
            return self.getToken(CWSpecParser.T_DETAILS, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CWSpecParser.SPACE)
            else:
                return self.getToken(CWSpecParser.SPACE, i)

        def lineElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CWSpecParser.LineElementContext)
            else:
                return self.getTypedRuleContext(CWSpecParser.LineElementContext,i)

